<resources>
    <string name="app_name">FreeParkingFinder</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="map">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="find_parking">Find Parking</string>
    <string name="clear">Clear</string>
    <string name="choose_radius_m">Choose search radius</string>
    <string name="choose_zoom_level">Choose zoom level</string>

    <string-array name="radiusValues">
        <item>1000</item>
        <item>2000</item>
        <item>4000</item>
        <item>8000</item>
    </string-array>

    <string-array name="zoomValues">
        <item>15</item>
        <item>12</item>
        <item>9</item>
        <item>5</item>
    </string-array>
</resources>
