<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="230dp"
        android:text="@string/choose_radius_m"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <Spinner
        android:id="@+id/spinnerRadius"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="210dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="56dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="161dp"
        android:layout_height="113dp"
        android:layout_above="@+id/mapButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="209dp"
        android:text="@string/choose_zoom_level"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <Spinner
        android:id="@+id/spinnerZoom"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="214dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="313dp" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="23dp"
        android:text="@string/map"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"/>


    <Button
        android:id="@+id/favouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="280dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="21dp"
        android:text="@string/favourites"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/history"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"/>




</RelativeLayout>