<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="225dp"
        android:dividerHeight="8dp">


    </ListView>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settingsButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:layout_marginBottom="23dp"
        android:background="@color/colorPrimary"
        android:text="@string/clear"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="23dp"
        android:text="@string/map"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"/>


    <Button
        android:id="@+id/favouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="280dp"
        android:layout_marginLeft="280dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="21dp"
        android:text="@string/favourites"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/settings"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"/>


</RelativeLayout>