<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

        <!--Icon made by Freepik from www.flaticon.com-->
        <ImageView
            android:id="@+id/heartView"
            android:layout_width="68dp"
            android:layout_height="56dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="334dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="370dp"
            android:src="@drawable/ic_action_name"
            android:visibility="invisible"/>

        <com.skyfishjy.library.RippleBackground
            android:id="@+id/rippleBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:rb_color="#0099CC"
            app:rb_duration="3000"
            app:rb_radius="32dp"
            app:rb_rippleAmount="4"
            app:rb_scale="6">

            <!--Icon made by Freepik from www.flaticon.com-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_pin"/>
        </com.skyfishjy.library.RippleBackground>


    <!--Ripple effect from https://github.com/skyfishjy/android-ripple-background-->




    <!-->Material search bar from https://github.com/mancj/MaterialSearchBar-->
    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/searchBar"
        style="@style/MaterialSearchBarLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        android:outlineProvider="bounds"
        app:mt_hint="Search location for parking"
        app:mt_maxSuggestionsCount="10"
        app:mt_speechMode="false"
        app:mt_navIconEnabled="true"
        app:mt_placeholder="Search a location"/>

    <Button
        android:id="@+id/find_Parking"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="127dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:layout_marginBottom="91dp"
        android:background="@color/colorPrimary"
        android:text="@string/find_parking"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/favouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="23dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/favourites"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="22dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/settings" />

    <Button
        android:id="@+id/historyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="303dp"
        android:layout_marginLeft="303dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/history" />


</RelativeLayout>